// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should raise errors with invalid.css 1`] = `
[
  [
    {
      "column": 24,
      "endColumn": 26,
      "endLine": 6,
      "fix": undefined,
      "line": 6,
      "rule": "alpha-value-notation",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 10,
      "endColumn": 14,
      "endLine": 6,
      "fix": undefined,
      "line": 6,
      "rule": "color-function-alias-notation",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 10,
      "endColumn": 27,
      "endLine": 6,
      "fix": undefined,
      "line": 6,
      "rule": "color-function-notation",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 3,
      "endColumn": 17,
      "endLine": 2,
      "fix": undefined,
      "line": 2,
      "rule": "custom-property-pattern",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 10,
      "endColumn": 27,
      "endLine": 6,
      "fix": undefined,
      "line": 6,
      "rule": "declaration-property-value-no-unknown",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 15,
      "endColumn": 18,
      "endLine": 10,
      "fix": undefined,
      "line": 10,
      "rule": "declaration-property-value-no-unknown",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 16,
      "endColumn": 18,
      "endLine": 10,
      "fix": undefined,
      "line": 10,
      "rule": "length-zero-no-unit",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 24,
      "endColumn": 26,
      "endLine": 10,
      "fix": undefined,
      "line": 10,
      "rule": "length-zero-no-unit",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 1,
      "endColumn": 5,
      "endLine": 9,
      "fix": undefined,
      "line": 9,
      "rule": "no-descending-specificity",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 20,
      "endColumn": 21,
      "endLine": 6,
      "fix": undefined,
      "line": 6,
      "rule": "no-irregular-whitespace",
      "severity": "error",
      "url": undefined,
    },
  ],
]
`;

exports[`should verify CSS in styled-components 1`] = `
[
  [
    {
      "column": 24,
      "endColumn": 26,
      "endLine": 10,
      "fix": undefined,
      "line": 10,
      "rule": "alpha-value-notation",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 10,
      "endColumn": 14,
      "endLine": 10,
      "fix": undefined,
      "line": 10,
      "rule": "color-function-alias-notation",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 10,
      "endColumn": 27,
      "endLine": 10,
      "fix": undefined,
      "line": 10,
      "rule": "color-function-notation",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 10,
      "endColumn": 27,
      "endLine": 10,
      "fix": undefined,
      "line": 10,
      "rule": "declaration-property-value-no-unknown",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 15,
      "endColumn": 18,
      "endLine": 19,
      "fix": undefined,
      "line": 19,
      "rule": "declaration-property-value-no-unknown",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 16,
      "endColumn": 18,
      "endLine": 19,
      "fix": undefined,
      "line": 19,
      "rule": "length-zero-no-unit",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 24,
      "endColumn": 26,
      "endLine": 19,
      "fix": undefined,
      "line": 19,
      "rule": "length-zero-no-unit",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 1,
      "endColumn": 5,
      "endLine": 18,
      "fix": undefined,
      "line": 18,
      "rule": "no-descending-specificity",
      "severity": "error",
      "url": undefined,
    },
    {
      "column": 20,
      "endColumn": 21,
      "endLine": 10,
      "fix": undefined,
      "line": 10,
      "rule": "no-irregular-whitespace",
      "severity": "error",
      "url": undefined,
    },
  ],
]
`;
